# maestro_scheduler

./: .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
scheduler/: job.yaml  kube_scheduler.py  label_studio_scheduler.py  maestro_model.py  scheduler.py  scheduler_demo.py
